...
    val currentBook = bookshelfUiState.currentBook as Book
    val context = LocalContext.current
    val bookLink = currentBook.volumeInfo.canonicalVolumeLink
    val bookAuthor = currentBook.volumeInfo.authors.toDisplayStringAuthors()
    val bookCategory = currentBook.volumeInfo.categories.toDisplayStringCategories()
...

    LazyColumn(
        modifier = Modifier.testTag("Details_lazy_column")
    ) {
        item {
...
                        .fillMaxWidth()
                        .padding(bottom = dimensionResource(R.dimen.padding_small))
                        .semantics { testTag = "bookTitle" }
                )
                Text(
...
                        .fillMaxWidth()
                        .padding(bottom = dimensionResource(R.dimen.padding_medium))
                        .semantics { testTag = "bookAuthors" }
                )
                Card(
...
                            .fillMaxWidth()
                            .aspectRatio(1.5f)
                            .semantics { testTag = "bookImage" }
                    )
                }
...

                    LazyRow (state = globalInfoListState,
                        modifier = Modifier.testTag("Global_grid")){
                        if (isTest) {
                            item {
...
                                    modifier = Modifier
                                        .size(1.dp)
                                        .semantics { testTag = "startOfGlobalRow" }
                                )
                            }
...
                                    modifier = Modifier
                                        .size(1.dp)
                                        .semantics { testTag = "endOfGlobalRow" }
                                )
                            }
...
                                .padding(start = dimensionResource(R.dimen.padding_medium))
                                .size(dimensionResource(R.dimen.fixed_icon_size))
                                .semantics { testTag = "GlobalInformationBackArrow" }
                        )
                    }
...
                                .align(Alignment.CenterEnd)
                                .size(dimensionResource(R.dimen.fixed_icon_size))
                                .semantics { testTag = "GlobalInformationForwardArrow" }
                        )
                    }
...

                    LazyRow (state = bookInfoListState,
                        modifier = Modifier.testTag("Book_grid")) {
                        if (isTest) {
                            item {
...
                                    modifier = Modifier
                                        .size(1.dp)
                                        .semantics { testTag = "startOfBookRow" }
                                )
                            }
...
                                    modifier = Modifier
                                        .size(1.dp)
                                        .semantics { testTag = "endOfBookRow" }
                                )
                            }
...
                                .padding(start = dimensionResource(R.dimen.padding_medium))
                                .size(dimensionResource(R.dimen.fixed_icon_size))
                                .semantics { testTag = "BookInformationBackArrow" }
                        )
                    }
...
                                .align(Alignment.CenterEnd)
                                .size(dimensionResource(R.dimen.fixed_icon_size))
                                .semantics { testTag = "BookInformationForwardArrow" }
                        )
                    }
...

                    LazyRow(state = availabilityInfoListState,
                        modifier = Modifier.testTag("Availability_grid")) {
                        if (isTest) {
                            item {
...
                                    modifier = Modifier
                                        .size(1.dp)
                                        .semantics { testTag = "startOfAvailabilityRow" }
                                )
                            }
...
                                    modifier = Modifier
                                        .size(1.dp)
                                        .semantics { testTag = "endOfAvailabilityRow" }
                                )
                            }
...
                                .padding(start = dimensionResource(R.dimen.padding_medium))
                                .size(dimensionResource(R.dimen.fixed_icon_size))
                                .semantics { testTag = "AvailabilityInformationBackArrow" }
                        )
                    }
...
                                .align(Alignment.CenterEnd)
                                .size(dimensionResource(R.dimen.fixed_icon_size))
                                .semantics { testTag = "AvailabilityInformationForwardArrow" }
                        )
                    }
...
                                    end = dimensionResource(R.dimen.padding_medium)
                                )
                                .semantics { testTag = "bookDescriptionIcon" }
                        )
                        Text(
...
                                    bottom = dimensionResource(R.dimen.padding_medium)
                                )
                                .semantics { testTag = "bookDescription" }
                        )
                    }
...
                Card(
                    modifier = Modifier
                        .testTag("bookLinkCard")
                        .fillMaxWidth()
                        .clickable {
...
                                    end = dimensionResource(R.dimen.padding_medium)
                                )
                                .semantics { testTag = "bookLinkIcon" }
                        )
                        Text(
...
                title = "Sample Book",
                authors = listOf("Author Name"),
                publisher = "Sample Publisher",
                publishedDate = "2024",
                description = "This is a sample description.",
...
