...
                columns = GridCells.Fixed(2),
                modifier = Modifier
                    .border(
                    width = dimensionResource(R.dimen.padding_x_x_small),
                    color = MaterialTheme.colorScheme.onPrimaryContainer
                )
                    .testTag("grid")
            ) {
                items(
                    items = bookshelfUiState.booksList,
                    key = { it.id }
                ) { book ->
                    BookCard(
...
